<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- String Global App -->
    <string name="app_name">mitaxi</string>

    <!-- String data from Splash -->
    <string name="dummy_content">WideTech S.A</string>
    <string name="dummy_button">Acceder</string>

    <!-- Title from Activities -->
    <string name="title_activity_main">TaxiPlus</string>
    <string name="title_activity_user_register">Registro</string>

    <!-- String data from MainActivity -->
    <string name="label_button_get_taxi">Solicitar Servicio!</string>
    <string name="hint_actual_address_edittext">Buscando direccion&#8230;</string>

    <!-- String data from Register -->
    <string name="label_form_user_register">Usuario</string>
    <string name="label_form_mail_user_register">Correo</string>
    <string name="label_name_user">Nombre</string>
    <string name="label_phone_user">Teléfono</string>
    <string name="label_button_register">Registrarme</string>

    <!-- String data from error -->
    <string name="empty_error_field">Este campo es necesario</string>
    <string name="error_internet_connection">No hay acceso a internet. Verifique su conexión</string>
    <string name="invalid_mail">Email incorrecto</string>
    <string name="error_register_user">No es posible establecer conexión con el servicio. Intente mas tarde.</string>
    <string name="error_number_of_taxis">Debe pedir un Taxi por lo menos!</string>
    <string name="mobile_not_found">De momento no encontramos un taxi para ti. Por favor intenta más tarde!</string>
    <string name="service_mobile_canceled">Servicio Cancelado!</string>

    <!-- String from dialogs -->
    <string name="dialog_message_sending_register">Registrando&#8230;</string>
    <string name="title_activity_service">Solicitar Servicio</string>
    <string name="dialog_message_get_mobile">Solicitando Servicio!</string>
    <string name="title_dialog_add_new_address">Dirección nueva</string>
    <string name="message_dialog_add_new_address">Deseas agregar esta dirección a tus favoritas?</string>
    <string name="dialog_message_find_position_taxi">Ubicando el taxi&#8230;</string>
    <string name="message_success_update_profile">Actualizacion de datos Correcta</string>
    <string name="cannot_determinate_location">De momento no podemos determinar tu ubicación.</string>
    <string name="non_close_services_in_course">Tienes el servicio en camino!</string>
    <string name="verify_address">Verifica tu dirección. Es la exacta?</string>
    <string name="verify_city">Verifica que estes en una ciudad donde nuestro servicio funcione.</string>
    <string name="title_dialog_cancel_taxi">Cancelar Taxi</string>
    <string name="message_dialog_cancel_taxi">Está seguro de cancelar este taxi?</string>
    <string name="message_dialog_arrived_taxi">Confirmas que tu taxi llegó?</string>
    <string name="title_dialog_arrived_taxi">Taxi llegó</string>
    <string name="dialog_cancel_taxi">Cancelando Taxi&#8230;</string>
    <string name="message_error_cancel_taxi">No pudimos cancelar tu taxi. Algo pasó, intenta más tarde.</string>
    <string name="message_error_location_taxi">De momento no podemos localizar tu taxi.</string>
    <string name="message_success_cancel_servicio">Tu servicio fue cancelado</string>
    <string name="message_success_arrived_taxi">Tu taxi llegó</string>

    <!-- String from activity Service -->
    <string name="label_total_taxis">Taxis:</string>
    <string name="label_address_service">Direccion</string>
    <string name="label_neighborhood_service">Barrio</string>
    <string name="label_point_service">Nota</string>
    <string name="label_accept_service">Aceptar</string>
    <string name="title_activity_mobile_list">Taxis En Curso</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_table_data_service">Datos del servicio</string>
    <string name="find_taxi_message">Estamos Localizando tu taxi!</string>

    <!-- String from buttons dialog -->
    <string name="label_button_dialog_ok">Si</string>
    <string name="label_button_dialog_cancel">No</string>

    <!-- String from buttons QuickActions Mobile -->
    <string name="label_quick_action_cancel_mobile">Cancelar</string>
    <string name="label_quick_action_view_positon_mobile">Posición</string>
    <string name="label_quick_action_arrived_taxi">Llegó!</string>
    <string name="title_activity_position_taxi">Ubicacion actual del taxi</string>

    <!-- String from history services -->
    <string name="title_row_service">Servicio #:</string>
    <string name="desc_plate_taxi">Placa del Taxi:</string>
    <string name="status_of_service">Estado del servicio:</string>

    <!-- String from tags icon actionbarsherlock main -->
    <string name="label_ic_options_bar">Opciones</string>
    <string name="label_ic_address_bar">Direcciones</string>
    <string name="label_ic_profile_bar">Perfil</string>
    <string name="label_ic_cancel_bar">Cancelar</string>
    <string name="label_ic_close_bar">Cerrar</string>
    <string name="label_ic_confirm_bar">Confirmar</string>
    <string name="label_ic_help_bar">Cómo funciona</string>
    <string name="label_ic_history_bar">Histórico</string>
    <string name="label_ic_about_bar">Acerca de mitaxi</string>
    <string name="title_activity_edit_profile">Editar Perfil</string>

    <!-- String from tags icon actionbarsherlock edit profile -->
    <string name="label_ic_save_profile">Guardar</string>

    <!-- String from key Google Maps API -->
    <string name="android_key_maps_production">0zgjA_4Wt8t3V8xEz4qei54Vlcw2Rwpadd22kpg</string>
    <string name="android_key_maps_debug">0xy_mDiBNwQTzRHijlUzglUM9WySusLdoGB9roQ</string>

    <!-- String from About App -->
    <string name="title_activity_about">Acerda de mitaxi</string>
    <string name="copyright">© Copyright - Taxi Finder</string>
    <string name="used_terms">Términos de uso</string>
    <string name="link_to_web_license">http://www.mitaxiapp.co/disclaimer.htm</string>
    <string name="title_activity_list_favorite_address">Direcciones favoritas</string>
    <string name="title_activity_only_taxi">Servicio en camino</string>
    <string name="title_activity_history">Servicios Solicitados</string>

    <!-- String from status Service -->
    <string name="status_service_arrived">Finalizado</string>
    <string name="status_service_in_course">En curso</string>
    <string name="status_service_cancel">Cancelado</string>

    <!-- String from message empty History -->
    <string name="no_exists_history">No tienes servicios solicitados últimamente</string>

    <!-- String from message empty favorite Address -->
    <string name="no_exists_favorite_address">No tienes direcciones favoritas</string>

</resources>