<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".AboutActivity" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo_intro" />

        <TextView
            android:id="@+id/textViewCopyRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/imageView1"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/copyright" />

        <TextView
            android:id="@+id/textViewUserTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imageView1"
            android:layout_alignRight="@+id/imageView1"
            android:layout_below="@+id/textViewCopyRight"
            android:layout_marginTop="19dp"
            android:linksClickable="true"
            android:gravity="center"
            android:textStyle="bold"
            android:autoLink="all"
            android:text="@string/used_terms" />
    </RelativeLayout>

</ScrollView>